# aspectly

./: .gitignore  .npmrc  AspectlyBridge.podspec  AspectlyBridgeWebKit.podspec  CHANGELOG.md  Package.swift  README.md  SECURITY.md  pnpm-lock.yaml
.changeset/: native-ios-android-bridges.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-landing.yml  publish-cocoapods.yml  release.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/aspectly-bridge/: README.md  build.gradle.kts
android/aspectly-bridge-webview/: README.md  build.gradle.kts  consumer-rules.pro
apps/landing/: index.html  package.json  popup.html  vite.config.ts  widget.html
dart/: .packages  CHANGELOG.md  README.md  pubspec.yaml
dart/.dart_tool/: package_config.json
dart/lib/: aspectly_bridge.dart
dart/test/: bridge_host_test.dart
docs/: API.md  ARCHITECTURE.md  EXAMPLES.md  MIGRATION.md  PUBLISHING.md  README.md
dotnet/: Aspectly.sln  README.md
dotnet/Aspectly.Bridge.CefSharp/: Aspectly.Bridge.CefSharp.csproj  README.md
dotnet/Aspectly.Bridge.Tests/: Aspectly.Bridge.Tests.csproj  BridgeHostTests.cs  TEST_PLAN.md
nupkgs/: Aspectly.Bridge.2.0.3.nupkg  Aspectly.Bridge.2.0.4.nupkg  Aspectly.Bridge.CefSharp.2.0.4.nupkg  Aspectly.Bridge.WebView2.2.0.4.nupkg
python/: README.md  pyproject.toml
python/aspectly_bridge/: __init__.py  bridge_host.py  browser_bridge.py  errors.py  protocol.py  webkitgtk.py
python/tests/: test_bridge_host.py
swift/: README.md
(+110 files in other folders)
